infra-def/cloudformation/setup-ipfs.yaml
Parameters:
  EC2InstanceIPFSName:
    Type: String
    Default: ipfs-0001-debian
  EC2SSHKeyIPFSAccess:
    Type: String
    Default: sshkey-bastion-0001
  VPCid:
    Type: String
    Default: ""
  VPCPublicSubnetId:
    Type: String
    Default: ""
  EC2AMIid:
    Type: String
    Default: ""
  PublicKeyMaterialAdmin:
    Type: String
    Default: ""

Resources:
  SSHKeyBastionAccess:
    Type: AWS::EC2::KeyPair
    Properties:
      KeyName: !Ref EC2SSHKeyIPFSAccess
      PublicKeyMaterial: !Ref PublicKeyMaterialAdmin

  IpfsSecurityGroup0001:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "IPFS SG, Allow all Egress, Allow SSH Ingress, Dual Stack"
      GroupName: "ipfs-sg-allow-egress-all-allow-ingress-ssh"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
        - CidrIpv6: ::/0
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
        - CidrIpv6: ::/0
          IpProtocol: "-1"
      VpcId: !Ref VPCid

  EC2InstanceIPFS:
    Type: AWS::EC2::Instance
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EC2InstanceIPFSName
      ImageId: !Ref EC2AMIid
      InstanceInitiatedShutdownBehavior: stop
      InstanceType: t3.small
      KeyName: !Ref EC2SSHKeyIPFSAccess
      Monitoring: true
      UserData: !Base64
        Fn::Sub: |
          #!/bin/bash
          apt update
          #apt full-upgrade -y
          apt install -y git curl wget openstack-clients vim awscli
          wget https://dist.ipfs.tech/kubo/v0.34.0/kubo_v0.34.0_linux-amd64.tar.gz
          tar -xvzf kubo_v0.34.0_linux-amd64.tar.gz
          bash kubo/install.sh
          su -c "ipfs init" -s /bin/bash admin
          cat <<'EOF' > /etc/systemd/system/ipfs.service
          [Unit]
          Description=InterPlanetary File System (IPFS) daemon

          [Service]
          ExecStart=/usr/local/bin/ipfs daemon
          User=admin
          Group=admin

          RuntimeMaxSec=1800
          Restart=on-failure

          [Install]
          WantedBy=default.target
          EOF
          systemctl daemon-reload
          systemctl enable ipfs.service
          systemctl start ipfs.service
          ipfs pin add 
      SecurityGroupIds:
        - !Ref IpfsSecurityGroup0001
      SubnetId: !Ref VPCPublicSubnetId
      BlockDeviceMappings:
      - DeviceName: "/dev/sda1"
        Ebs:
          DeleteOnTermination: false
          Encrypted: true
          VolumeSize: 20
          VolumeType: gp3
